<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Headline1"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="20sp"
        android:text="@string/about"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/academyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Headline2"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="16sp"
        android:text="@string/about_description"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/aboutTitle"
        app:layout_constraintTop_toBottomOf="@id/aboutTitle" />

    <TextView
        android:id="@+id/classText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BodyParagraph"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="14sp"
        android:text="@string/class_year"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="@id/academyTitle"
        app:layout_constraintTop_toBottomOf="@id/academyTitle" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Assistive"
        android:textColor="?attr/on_surface_on_surface_lv_2"
        android:textSize="12sp"
        android:text="@string/app_name_text"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/classText"
        app:layout_constraintStart_toStartOf="@id/classText" />

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Assistive"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="14sp"
        android:text="@string/app_name_title"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="@id/app_name" />

    <TextView
        android:id="@+id/api_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Assistive"
        android:textColor="?attr/on_surface_on_surface_lv_2"
        android:textSize="12sp"
        android:text="@string/api_credit"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/app_name_text"
        app:layout_constraintStart_toStartOf="@id/app_name_text" />

    <TextView
        android:id="@+id/api_credit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Assistive"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="14sp"
        android:text="@string/app_name"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/api_credit"
        app:layout_constraintStart_toStartOf="@id/api_credit" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Assistive"
        android:textColor="?attr/on_surface_on_surface_lv_2"
        android:textSize="12sp"
        android:text="@string/developer"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/api_credit_text"
        app:layout_constraintStart_toStartOf="@id/api_credit_text" />

    <TextView
        android:id="@+id/developer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Assistive"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="14sp"
        android:text="@string/developer_name"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/developer"
        app:layout_constraintStart_toStartOf="@id/developer" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/sofascore_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developer_text"
        app:tint="@color/color_primary_default" />


</androidx.constraintlayout.widget.ConstraintLayout>