<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_matches_football">

    <fragment
        android:id="@+id/navigation_matches_football"
        android:name="com.example.sofascoreapp.ui.fragments.FootballEventsFragment"
        android:label="@string/football"
        tools:layout="@layout/fragment_sport_events" />
    <fragment
        android:id="@+id/navigation_matches_basketball"
        android:name="com.example.sofascoreapp.ui.fragments.BasketballEventsFragment"
        android:label="@string/basketball"
        tools:layout="@layout/fragment_sport_events" />
    <fragment
        android:id="@+id/navigation_matches_american_football"
        android:name="com.example.sofascoreapp.ui.fragments.AmericanFootballFragment"
        android:label="@string/amer_football_short"
        tools:layout="@layout/fragment_sport_events" />

</navigation>