<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_tournaments_football">

    <fragment
        android:id="@+id/navigation_tournaments_football"
        android:name="com.example.sofascoreapp.ui.fragments.FootballTournamentsFragment"
        android:label="@string/football"
        tools:layout="@layout/fragment_football_events" />
    <fragment
        android:id="@+id/navigation_tournaments_basketball"
        android:name="com.example.sofascoreapp.ui.fragments.BasketballTournamentsFragment"
        android:label="@string/basketball"
        tools:layout="@layout/fragment_basketball_events" />
    <fragment
        android:id="@+id/navigation_tournaments_american_football"
        android:name="com.example.sofascoreapp.ui.fragments.AmericanFootballTournamentsFragment"
        android:label="@string/amer_football_short"
        tools:layout="@layout/fragment_american_football_events" />

</navigation>