<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/layout">

    <TextView
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="14sp"
        style="@style/Tabular"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/teamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="14sp"
        style="@style/Tabular"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/played_matches"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="14sp"
        style="@style/Tabular"
        android:layout_gravity="center"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/wins" />

    <TextView
        android:id="@+id/wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wins"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="14sp"
        style="@style/Tabular"
        android:layout_marginEnd="22dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/draws" />

    <TextView
        android:id="@+id/draws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draws"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="14sp"
        style="@style/Tabular"
        android:layout_marginEnd="22dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/loses" />

    <TextView
        android:id="@+id/loses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loses"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="14sp"
        style="@style/Tabular"
        android:layout_marginEnd="22dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/points" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        android:textColor="?attr/on_surface_on_surface_lv_1"
        android:textSize="14sp"
        style="@style/Tabular"
        android:layout_marginEnd="22dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>