<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/themeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/color_primary_default"
        android:textSize="12sp"
        android:text="@string/theme"
        style="@style/Assistive"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:checkedButton="@+id/lightButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeTitle">

        <RadioButton
            android:id="@+id/lightButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginBottom="24dp"
            android:layoutDirection="rtl"
            android:text="@string/light"
            style="@style/BodyParagraph"
            android:textSize="14sp"
            android:textColor="?attr/on_surface_on_surface_lv_1"
            android:textAlignment="textStart"
            app:buttonTint="?attr/color_primary_default" />

        <RadioButton
            android:id="@+id/darkButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/dark"
            style="@style/BodyParagraph"
            android:textSize="14sp"
            android:textColor="?attr/on_surface_on_surface_lv_1"
            android:textAlignment="textStart"
            app:buttonTint="?attr/color_primary_default" />
    </RadioGroup>

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/color_primary_default"
        android:textSize="12sp"
        style="@style/Assistive"
        android:text="@string/date_format"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@id/themeRadioGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/dateRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:checkedButton="@+id/firstFormat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTitle">

        <RadioButton
            android:id="@+id/firstFormat"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginBottom="24dp"
            android:layoutDirection="rtl"
            style="@style/BodyParagraph"
            android:textSize="14sp"
            android:textColor="?attr/on_surface_on_surface_lv_1"
            android:text="@string/first_format"
            android:textAlignment="textStart"
            app:buttonTint="?attr/color_primary_default" />

        <RadioButton
            android:id="@+id/secondFormat"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            style="@style/BodyParagraph"
            android:textSize="14sp"
            android:textColor="?attr/on_surface_on_surface_lv_1"
            android:text="@string/second_format"
            android:textAlignment="textStart"
            app:buttonTint="?attr/color_primary_default" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>